infrastructure/docker-mailserver/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP

metadata:
  name: smtp
  namespace: mail

spec:
  entryPoints: [mail-smtp]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: docker-mailserver
          namespace: mail
          port: smtp-proxy
          proxyProtocol:
            version: 2

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP

metadata:
  name: submission
  namespace: mail

spec:
  entryPoints: [mail-sub]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: docker-mailserver
          namespace: mail
          port: sub-proxy
          proxyProtocol:
            version: 2

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP

metadata:
  name: submissions
  namespace: mail

spec:
  entryPoints: [mail-subs]
  routes:
    - match: HostSNI(`${DOMAIN}`)
      services:
        - name: docker-mailserver
          namespace: mail
          port: subs-proxy
          proxyProtocol:
            version: 2
  tls:
    passthrough: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP

metadata:
  name: imaps
  namespace: mail

spec:
  entryPoints: [mail-imaps]
  routes:
    - match: HostSNI(`${DOMAIN}`)
      services:
        - name: docker-mailserver
          namespace: mail
          port: imaps-proxy
          proxyProtocol:
            version: 2
  tls:
    passthrough: true
